force-app/main/default/objects/QuoteLineItem/fields/Billing_Start_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Offset_Days__c</fullName>
    <description
  >Days after Quote.Effective_Date__c that billing for this line item begins. Mirrors OpportunityLineItem.Billing_Start_Offset_Days__c via the Copy-OLI-to-QLI accelerator. 0 = bill from day one.</description>
    <inlineHelpText
  >Offset (days) from quote effective date before this line bills.</inlineHelpText>
    <label>Billing Start Offset (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>