force-app/main/default/objects/QuoteLineItem/fields/Implementation_Phase__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Phase__c</fullName>
    <description
  >Which delivery phase this QLI belongs to. Mirrors OpportunityLineItem.Implementation_Phase__c — copied by the Copy-OLI-to-QLI accelerator so the implementation plan carries through to the quote.</description>
    <inlineHelpText
  >Which implementation phase this line item belongs to.</inlineHelpText>
    <label>Implementation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
                <default>true</default>
                <label>Phase 1</label>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>