force-app/main/default/objects/QuoteLineItem/fields/Opportunity_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_ID__c</fullName>
    <description
  >Id of the source OpportunityLineItem this QuoteLineItem was auto-created from when a Quote is built from an Opportunity. Populated by the QuoteLineItem workflow rule (formula OpportunityLineItem.Id — an undocumented cross-reference available only during UI auto-creation). Read by COPY_QuoteLineItemTriggerHandler to copy down custom OLI fields. Part of the Copy-OLI-to-QLI accelerator.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >Source OpportunityLineItem Id (set automatically). Used to copy custom fields down to this quote line.</inlineHelpText>
    <label>Opportunity Line Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>