force-app/main/default/objects/QuoteLineItem/fields/Product_Family_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Rollup__c</fullName>
    <description
  >Formula Text mirroring Product2.Family onto the QLI so reports group by family without an additional join. Traverses through PricebookEntry because QLI does not have a direct Product2 relationship.</description>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <inlineHelpText
  >Auto-pulled from the related Product2's Family.</inlineHelpText>
    <label>Product Family (Rollup)</label>
    <type>Text</type>
</CustomField>