force-app/main/default/objects/QuoteLineItem/fields/Requires_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Requires_Provisioning__c</fullName>
    <description
  >Formula Checkbox: true when the QLI's product family demands a provisioning step (Core Platform or AI Dispatch Add-On). Used downstream by the Order trigger to decide whether to publish Provisioning_Requested__e.</description>
    <formula>OR(
  TEXT(PricebookEntry.Product2.Family) = "Core Platform",
  TEXT(PricebookEntry.Product2.Family) = "AI Dispatch Add-On"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >True when the product family needs provisioning. Auto-calculated.</inlineHelpText>
    <label>Requires Provisioning</label>
    <type>Checkbox</type>
</CustomField>