force-app/main/default/objects/QuoteLineItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description
  >Revenue classification for this QLI. Mirrors OpportunityLineItem.Revenue_Type__c via the Copy-OLI-to-QLI accelerator. Drives the recurring vs. one-time treatment on the resulting Order/Contract.</description>
    <inlineHelpText
  >How this line item is recognized for revenue calculations.</inlineHelpText>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>