force-app/main/default/objects/QuoteLineItem/fields/Usage_Band__c.field-meta.xml
<CustomField>
    <fullName>Usage_Band__c</fullName>
    <description
  >For Revenue_Type__c = 'Usage' line items: committed usage tier. Mirrors OpportunityLineItem.Usage_Band__c via the Copy-OLI-to-QLI accelerator. Ignored for non-usage QLIs.</description>
    <inlineHelpText
  >Usage tier for usage-based QLIs. Ignored otherwise.</inlineHelpText>
    <label>Usage Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>